# ChangeLog for media-radio/fldigi
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-radio/fldigi/ChangeLog,v 1.44 2012/05/31 16:48:21 tomjbe Exp $

*fldigi-3.21.43 (31 May 2012)

  31 May 2012; Thomas Beierlein <tomjbe@gentoo.org> +fldigi-3.21.43.ebuild:
  Version bump

*fldigi-3.21.42 (13 May 2012)

  13 May 2012; Thomas Beierlein <tomjbe@gentoo.org> -fldigi-3.21.36.ebuild,
  +fldigi-3.21.42.ebuild:
  Version bump. Remove old.

  03 May 2012; Jeff Horelick <jdhore@gentoo.org> fldigi-3.21.35_pre1.ebuild,
  fldigi-3.21.36.ebuild, fldigi-3.21.38.ebuild, fldigi-3.21.40.ebuild,
  fldigi-3.21.41.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

*fldigi-3.21.41 (15 Apr 2012)

  15 Apr 2012; Thomas Beierlein <tomjbe@gentoo.org> +fldigi-3.21.41.ebuild:
  Version bump

  24 Mar 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> fldigi-3.21.38.ebuild:
  x86 stable wrt bug #407321

  13 Mar 2012; Agostino Sarubbo <ago@gentoo.org> fldigi-3.21.38.ebuild:
  Stable for amd64, wrt bug #407321

*fldigi-3.21.40 (10 Mar 2012)

  10 Mar 2012; Thomas Beierlein <tomjbe@gentoo.org> +fldigi-3.21.40.ebuild:
  version bump

*fldigi-3.21.38 (06 Feb 2012)

  06 Feb 2012; Thomas Beierlein <tomjbe@gentoo.org> +fldigi-3.21.38.ebuild:
  Version bump

  29 Jan 2012; Thomas Beierlein <tomjbe@gentoo.org> -fldigi-3.21.33.ebuild:
  Remove old only working with fltk-1.1 series

  28 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  fldigi-3.21.35_pre1.ebuild:
  x86 stable wrt bug #399099

*fldigi-3.21.36 (23 Jan 2012)

  23 Jan 2012; Thomas Beierlein <tomjbe@gentoo.org> +fldigi-3.21.36.ebuild:
  Version bump. Finish transition to fltk-1.3

  17 Jan 2012; Agostino Sarubbo <ago@gentoo.org> fldigi-3.21.35_pre1.ebuild:
  Stable for amd64, wrt bug #399099

  05 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> fldigi-3.21.33.ebuild:
  Drop keywording for amd64/x86 to avoid pulling in old version of